--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,17 +3,18 @@
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
             <h1>Invincible Finance Login</h1>
-            <form role="form">
+            <form role="form" #frm="ngForm" (ngSubmit)="checkLogin(frm.value)">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="text" name="user_email" class="form-control input-underline input-lg"  #user_email="ngModel" ngModel placeholder="Email">
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input type="password" name="password" class="form-control input-underline input-lg" #password="ngModel" ngModel placeholder="Password">
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']" (click)="onLoggedin()"> Log in </a>
+                <button type="submit" class="btn rounded-btn">Log in</button>
+                <!-- <a class="btn rounded-btn" [routerLink]="['/dashboard']" (click)="onLoggedin()"> Log in </a> -->
                 &nbsp;
                 <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
             </form>
