--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,26 +1,28 @@
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <img class="user-avatar" src="assets/images/logo.png" width="150px" />
+            <!-- <img class="user-avatar" src="assets/images/logo.png" width="150px" /> -->
             <h1>Invincible Finance</h1>
-            <form role="form">
+            <form #frm="ngForm" (ngSubmit)="register_user(frm.value)">
                 <div class="form-content">
-                    <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Full Name">
-                    </div>
+                   
 
                     <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="email" class="form-control input-underline input-lg" name="user_email" #user_email="ngModel" ngModel placeholder="Email">
                     </div>
-
+                    
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input type="password" class="form-control input-underline input-lg" name="password" #password="ngModel" ngModel placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Repeat Password">
+                        <input type="password" class="form-control input-underline input-lg" validateEqual="password" name="confirm_password" #confirm_password="ngModel" ngModel placeholder="Repeat Password">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control input-underline input-lg"  name="role" placeholder="Role" #role="ngModel" ngModel>
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Register </a>&nbsp;
+                <button type="submit" class="btn rounded-btn">Register</button>
+                <!-- <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Register </a>&nbsp; -->
                 <a class="btn rounded-btn" [routerLink]="['/login']"> Log in </a>
             </form>
         </div>
