--- a/src/app/layout/clients/add-client/add-client.component.html
+++ b/src/app/layout/clients/add-client/add-client.component.html
@@ -1,43 +1,72 @@
 
     <form class="" #frm="ngForm" (ngSubmit)="register(frm)">
-      <div class="col-md-12">
-          <fieldset><legend class="text-center">Personal Information <span class="req"></span></legend>
+   
+     <fieldset><legend class="text-center">Personal Information <span class="req"></span></legend>
+        <div class="row">
+      <div class="col-md-6">
+         
           
           <div class="input-group">
-              <span class="input-group-addon" id="basic-addon1">Active Group</span>
-              <input type="text" class="form-control" name="cname" #cname="ngModel" ngModel placeholder="Client Name" aria-describedby="basic-addon1">
+              <span class="input-group-addon" id="basic-addon1">Client Name</span>
+              <input type="text" class="form-control" [(ngModel)]="nm" name="cname" #cname="ngModel" ngModel placeholder="Client Name" aria-describedby="basic-addon1">
           </div>
-          
-        </fieldset><br><br>
-      </div>
         
+        
+       
+      </div>
+        <div class="col-md-6">
+            <div class="input-group">
+                <span class="input-group-addon" id="basic-addon1">Date</span>
+                <input type="date" class="form-control" [(ngModel)]="date" name="client_date" #client_date="ngModel" ngModel placeholder="Client Date" aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+            <div class="col-md-6">
+            <div class="form-group">
+                    <label for="mnumber"><span class="req">* </span> Mobile Number: </label>
+                            <input required type="text" [(ngModel)]="mno" name="mnumber"  #mnumber="ngModel" ngModel  class="form-control phone" maxlength="28" /> 
+                </div>
+                </div>
+                <div class="col-md-6"> 
+                <div class="form-group">
+                    <label for="email"><span class="req">* </span> Email Address: </label> 
+                        <input class="form-control" required  [(ngModel)]="email1" type="text" name="email"  #email="ngModel" ngModel />   
+                            <div class="status" id="status"></div>
+                </div>
+                </div>
+
+    </div>
+    </fieldset>
+           
       <div class="row">
         <div class="col-md-6">
             
             <fieldset><legend class="text-center">Primary Address <span class="req"></span></legend>
 
             <div class="form-group">
-            <label for="paddress"><span class="req">* </span> Primary Address: </label>
-                    <input required type="text" name="paddress" #paddress="ngModel" ngModel  class="form-control phone" maxlength="60"/> 
+            <label for="paddress"> Primary Address: </label>
+                    <input  type="text" [(ngModel)]="praddress" name="paddress" #paddress="ngModel" ngModel  class="form-control phone" maxlength="60"/> 
             </div>
 
             <div class="form-group"> 	 
-                <label for="saddress"><span class="req">* </span> Secondary Address: </label>
-                    <input class="form-control" type="text" name="saddress" #saddress="ngModel" ngModel required /> 
+                <label for="saddress"> Secondary Address: </label>
+                    <input class="form-control" [(ngModel)]="secaddress" type="text" name="saddress" #saddress="ngModel" ngModel  /> 
                         <div id="errFirst"></div>    
             </div>
 
             <div class="form-group">
-                <label for="city"><span class="req">* </span> City: </label> 
-                    <input class="form-control" type="text" name="city" #city="ngModel" ngModel  required />  
+                <label for="city"> City: </label> 
+                    <input class="form-control" [(ngModel)]="citi" type="text" name="city" #city="ngModel" ngModel   />  
                         <div id="errLast"></div>
             </div>
 
             
 
             <div class="form-group">
-                <label for="zipcode"><span class="req">* </span> Zip Code: </label> 
-                    <input class="form-control" type="text" name="zipcode" #zipcode="ngModel" ngModel required />  
+                <label for="zipcode"> Zip Code: </label> 
+                    <input class="form-control" [(ngModel)]="zip" type="text" name="zipcode" #zipcode="ngModel" ngModel  />  
                         <div id="errLast"></div>
             </div>
 
@@ -45,7 +74,7 @@
 
             <div class="form-group">
         
-                <input type="hidden"  name="client_id" />
+                <input type="hidden" [(ngModel)]="clientid"  name="client_id" #client_id="ngModel" ngModel/>
                 <hr>
 
                </div>
@@ -60,30 +89,21 @@
                 <fieldset><legend class="text-center">Contact Information<span class="req"></span></legend>
     
                 <div class="form-group">
-                <label for="phonenumber"><span class="req">* </span> Phone Number: </label>
-                        <input required type="text" name="phonenumber" #phonenumber="ngModel" ngModel class="form-control phone" maxlength="28" /> 
+                <label for="phonenumber"> Phone Number: </label>
+                        <input  type="text" [(ngModel)]="pnumber" name="phonenumber" #phonenumber="ngModel" ngModel class="form-control phone" maxlength="28" /> 
                 </div>
 
+              
+    
                 <div class="form-group">
-                    <label for="mnumber"><span class="req">* </span> Mobile Number: </label>
-                            <input required type="text" name="mnumber"  #mnumber="ngModel" ngModel  class="form-control phone" maxlength="28" /> 
-                </div>
-                
-                <div class="form-group">
-                    <label for="email"><span class="req">* </span> Email Address: </label> 
-                        <input class="form-control" required type="text" name="email"  #email="ngModel" ngModel />   
+                    <label for="aemail"> Alternate Address: </label> 
+                        <input class="form-control" [(ngModel)]="aeaddress" type="text" name="aemail"  #aemail="ngModel" ngModel  />   
                             <div class="status" id="status"></div>
                 </div>
     
                 <div class="form-group">
-                    <label for="aemail"><span class="req">* </span> Alternate Address: </label> 
-                        <input class="form-control" required type="text" name="aemail"  #aemail="ngModel" ngModel  />   
-                            <div class="status" id="status"></div>
-                </div>
-    
-                <div class="form-group">
-                    <label for="waddr"><span class="req">* </span> Web Address: </label>
-                        <input required name="waddr" type="text" class="form-control inputpass"  #waddr="ngModel" ngModel  minlength="4" maxlength="16"  /> 
+                    <label for="waddr"> Web Address: </label>
+                        <input  name="waddr" [(ngModel)]="webaddr" type="text" class="form-control inputpass"  #waddr="ngModel" ngModel  minlength="4" maxlength="16"  /> 
                 </div>
     
                 
