--- a/src/app/layout/clients/add-client/add-client.component.html
+++ b/src/app/layout/clients/add-client/add-client.component.html
@@ -1,5 +1,5 @@
 
-    <form class="" #frm="ngForm" (ngSubmit)="register(frm)">
+    <form class="" #frm="ngForm" (ngSubmit)="register(frm.value)">
    
      <fieldset><legend class="text-center">Personal Information <span class="req"></span></legend>
         <div class="row">
