--- a/src/app/layout/client-document/client-document/client-document.component.html
+++ b/src/app/layout/client-document/client-document/client-document.component.html
@@ -40,7 +40,7 @@
             </div> -->
             <div class="row">
                 <div class="col-md-6">
-            <tag-input  [onlyFromAutocomplete]="true" class="form-control input-underline input-lg" [placeholder]="'Add department'" [secondaryPlaceholder]="'Department'" name="tags"  [(ngModel)]="dept" #tags="ngModel" ngModel required placeholder="Enter the department">
+            <tag-input  [onlyFromAutocomplete]="true" class="form-control input-underline input-lg" [placeholder]="'Add department'" [secondaryPlaceholder]="'Select Document Category'" name="tags"  [(ngModel)]="dept" #tags="ngModel" ngModel required placeholder="Enter the department">
                 <tag-input-dropdown 
                                     [autocompleteItems]="itemList">
                                     
